--- a/ext/background.html
+++ b/ext/background.html
@@ -26,28 +26,28 @@
         <script src="/js/language/dictionary-data-util.js"></script>
         <script src="/js/general/object-property-accessor.js"></script>
 
-        <script src="/bg/js/anki.js"></script>
-        <script src="/bg/js/audio-downloader.js"></script>
-        <script src="/bg/js/clipboard-monitor.js"></script>
-        <script src="/bg/js/clipboard-reader.js"></script>
-        <script src="/bg/js/database.js"></script>
-        <script src="/bg/js/deinflector.js"></script>
-        <script src="/bg/js/dictionary-database.js"></script>
-        <script src="/bg/js/json-schema.js"></script>
-        <script src="/bg/js/mecab.js"></script>
-        <script src="/bg/js/media-utility.js"></script>
-        <script src="/bg/js/options.js"></script>
-        <script src="/bg/js/permissions-util.js"></script>
-        <script src="/bg/js/profile-conditions.js"></script>
-        <script src="/bg/js/request-builder.js"></script>
-        <script src="/bg/js/native-simple-dom-parser.js"></script>
-        <script src="/bg/js/template-patcher.js"></script>
-        <script src="/bg/js/text-source-map.js"></script>
-        <script src="/bg/js/translator.js"></script>
+        <script src="/js/comm/anki.js"></script>
+        <script src="/js/media/audio-downloader.js"></script>
+        <script src="/js/comm/clipboard-monitor.js"></script>
+        <script src="/js/comm/clipboard-reader.js"></script>
+        <script src="/js/data/database.js"></script>
+        <script src="/js/language/deinflector.js"></script>
+        <script src="/js/language/dictionary-database.js"></script>
+        <script src="/js/data/json-schema.js"></script>
+        <script src="/js/comm/mecab.js"></script>
+        <script src="/js/media/media-utility.js"></script>
+        <script src="/js/data/options-util.js"></script>
+        <script src="/js/data/permissions-util.js"></script>
+        <script src="/js/background/profile-conditions.js"></script>
+        <script src="/js/background/request-builder.js"></script>
+        <script src="/js/dom/native-simple-dom-parser.js"></script>
+        <script src="/js/templates/template-patcher.js"></script>
+        <script src="/js/general/text-source-map.js"></script>
+        <script src="/js/language/translator.js"></script>
 
-        <script src="/bg/js/backend.js"></script>
+        <script src="/js/background/backend.js"></script>
 
-        <script src="/bg/js/background-main.js"></script>
+        <script src="/js/background/background-main.js"></script>
 
         <!--
             Due to a Firefox bug, this next element is purposefully terminated incorrectly.
