--- a/ext/info.html
+++ b/ext/info.html
@@ -65,11 +65,11 @@
 
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
-<script src="/bg/js/permissions-util.js"></script>
+<script src="/js/data/permissions-util.js"></script>
 <script src="/js/settings/settings-controller.js"></script>
 <script src="/js/settings/backup-controller.js"></script>
 
-<script src="/bg/js/info-main.js"></script>
+<script src="/js/pages/info-main.js"></script>
 
 </body>
 </html>
