--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -168,11 +168,11 @@
 
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
-<script src="/bg/js/permissions-util.js"></script>
+<script src="/js/data/permissions-util.js"></script>
 <script src="/js/settings/permissions-toggle-controller.js"></script>
 <script src="/js/settings/settings-controller.js"></script>
 
-<script src="/bg/js/permissions-main.js"></script>
+<script src="/js/pages/permissions-main.js"></script>
 
 </body>
 </html>
