--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -16,9 +16,9 @@
     <script src="/lib/handlebars.min.js"></script>
     <script src="/js/language/dictionary-data-util.js"></script>
     <script src="/js/language/japanese-util.js"></script>
-    <script src="/bg/js/anki-note-data.js"></script>
-    <script src="/bg/js/template-renderer.js"></script>
-    <script src="/bg/js/template-renderer-frame-api.js"></script>
-    <script src="/bg/js/template-renderer-frame-main.js"></script>
+    <script src="/js/data/anki-note-data.js"></script>
+    <script src="/js/templates/template-renderer.js"></script>
+    <script src="/js/templates/template-renderer-frame-api.js"></script>
+    <script src="/js/templates/template-renderer-frame-main.js"></script>
 </body>
 </html>
