--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -331,12 +331,12 @@
 <script src="/js/dom/selector-observer.js"></script>
 <script src="/js/general/task-accumulator.js"></script>
 
-<script src="/bg/js/database.js"></script>
-<script src="/bg/js/dictionary-database.js"></script>
-<script src="/bg/js/dictionary-importer.js"></script>
-<script src="/bg/js/json-schema.js"></script>
-<script src="/bg/js/media-utility.js"></script>
-<script src="/bg/js/permissions-util.js"></script>
+<script src="/js/data/database.js"></script>
+<script src="/js/language/dictionary-database.js"></script>
+<script src="/js/language/dictionary-importer.js"></script>
+<script src="/js/data/json-schema.js"></script>
+<script src="/js/media/media-utility.js"></script>
+<script src="/js/data/permissions-util.js"></script>
 
 <script src="/js/settings/dictionary-controller.js"></script>
 <script src="/js/settings/dictionary-import-controller.js"></script>
@@ -349,7 +349,7 @@
 
 <script src="/js/settings/settings-display-controller.js"></script>
 
-<script src="/bg/js/welcome-main.js"></script>
+<script src="/js/pages/welcome-main.js"></script>
 
 </body>
 </html>
