--- a/ext/search.html
+++ b/ext/search.html
@@ -104,14 +104,14 @@
 <script src="/js/dom/html-template-collection.js"></script>
 <script src="/js/media/text-to-speech-audio.js"></script>
 
-<script src="/bg/js/anki-note-builder.js"></script>
-<script src="/bg/js/template-renderer-proxy.js"></script>
+<script src="/js/data/anki-note-builder.js"></script>
+<script src="/js/templates/template-renderer-proxy.js"></script>
 
-<script src="/bg/js/query-parser.js"></script>
-<script src="/bg/js/clipboard-monitor.js"></script>
-<script src="/bg/js/search-display-controller.js"></script>
+<script src="/js/display/query-parser.js"></script>
+<script src="/js/comm/clipboard-monitor.js"></script>
+<script src="/js/display/search-display-controller.js"></script>
 
-<script src="/bg/js/search-main.js"></script>
+<script src="/js/display/search-main.js"></script>
 
 </body>
 </html>
