--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3211,17 +3211,17 @@
 <script src="/js/general/task-accumulator.js"></script>
 <script src="/js/media/text-to-speech-audio.js"></script>
 
-<script src="/bg/js/anki.js"></script>
-<script src="/bg/js/anki-note-builder.js"></script>
-<script src="/bg/js/options.js"></script>
-<script src="/bg/js/database.js"></script>
-<script src="/bg/js/dictionary-database.js"></script>
-<script src="/bg/js/dictionary-importer.js"></script>
-<script src="/bg/js/json-schema.js"></script>
-<script src="/bg/js/media-utility.js"></script>
-<script src="/bg/js/permissions-util.js"></script>
-<script src="/bg/js/template-patcher.js"></script>
-<script src="/bg/js/template-renderer-proxy.js"></script>
+<script src="/js/comm/anki.js"></script>
+<script src="/js/data/anki-note-builder.js"></script>
+<script src="/js/data/options-util.js"></script>
+<script src="/js/data/database.js"></script>
+<script src="/js/language/dictionary-database.js"></script>
+<script src="/js/language/dictionary-importer.js"></script>
+<script src="/js/data/json-schema.js"></script>
+<script src="/js/media/media-utility.js"></script>
+<script src="/js/data/permissions-util.js"></script>
+<script src="/js/templates/template-patcher.js"></script>
+<script src="/js/templates/template-renderer-proxy.js"></script>
 
 <script src="/js/settings/keyboard-mouse-input-field.js"></script>
 <script src="/js/settings/profile-conditions-ui.js"></script>
