--- a/ext/background.html
+++ b/ext/background.html
@@ -35,10 +35,10 @@
         <script src="/js/language/dictionary-database.js"></script>
         <script src="/js/data/json-schema.js"></script>
         <script src="/js/comm/mecab.js"></script>
-        <script src="/js/media/media-utility.js"></script>
+        <script src="/js/media/media-util.js"></script>
         <script src="/js/data/options-util.js"></script>
         <script src="/js/data/permissions-util.js"></script>
-        <script src="/js/background/profile-conditions.js"></script>
+        <script src="/js/background/profile-conditions-util.js"></script>
         <script src="/js/background/request-builder.js"></script>
         <script src="/js/dom/native-simple-dom-parser.js"></script>
         <script src="/js/templates/template-patcher.js"></script>
