--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -335,7 +335,7 @@
 <script src="/js/language/dictionary-database.js"></script>
 <script src="/js/language/dictionary-importer.js"></script>
 <script src="/js/data/json-schema.js"></script>
-<script src="/js/media/media-utility.js"></script>
+<script src="/js/media/media-util.js"></script>
 <script src="/js/data/permissions-util.js"></script>
 
 <script src="/js/settings/dictionary-controller.js"></script>
