--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3218,7 +3218,7 @@
 <script src="/js/language/dictionary-database.js"></script>
 <script src="/js/language/dictionary-importer.js"></script>
 <script src="/js/data/json-schema.js"></script>
-<script src="/js/media/media-utility.js"></script>
+<script src="/js/media/media-util.js"></script>
 <script src="/js/data/permissions-util.js"></script>
 <script src="/js/templates/template-patcher.js"></script>
 <script src="/js/templates/template-renderer-proxy.js"></script>
