Rename window scroll (#1390)
* Rename WindowScroll to ScrollElement

* Rename window-scroll.js to scroll-element.js

* Update global order

--- a/ext/popup.html
+++ b/ext/popup.html
@@ -116,7 +116,7 @@
 <script src="/js/media/media-loader.js"></script>
 <script src="/js/dom/panel-element.js"></script>
 <script src="/js/dom/popup-menu.js"></script>
-<script src="/js/dom/window-scroll.js"></script>
+<script src="/js/dom/scroll-element.js"></script>
 <script src="/js/language/text-scanner.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
 <script src="/js/media/text-to-speech-audio.js"></script>
