--- a/ext/search.html
+++ b/ext/search.html
@@ -99,7 +99,7 @@
 <script src="/js/input/hotkey-util.js"></script>
 <script src="/js/media/media-loader.js"></script>
 <script src="/js/dom/popup-menu.js"></script>
-<script src="/js/dom/window-scroll.js"></script>
+<script src="/js/dom/scroll-element.js"></script>
 <script src="/js/language/text-scanner.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
 <script src="/js/media/text-to-speech-audio.js"></script>
