Test html script ordering (#1396)
* Simplify getAllFiles

* Add test to validate script order

* Update script include order

* Update content script order

* Update sw.js and corresponding lint

* Update manifest

--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -13,12 +13,16 @@
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
 </head>
 <body>
-    <script src="/lib/handlebars.min.js"></script>
-    <script src="/js/language/dictionary-data-util.js"></script>
-    <script src="/js/language/japanese-util.js"></script>
-    <script src="/js/data/anki-note-data.js"></script>
-    <script src="/js/templates/template-renderer.js"></script>
-    <script src="/js/templates/template-renderer-frame-api.js"></script>
-    <script src="/js/templates/template-renderer-frame-main.js"></script>
+
+<!-- Scripts -->
+<script src="/lib/handlebars.min.js"></script>
+
+<script src="/js/data/anki-note-data.js"></script>
+<script src="/js/language/dictionary-data-util.js"></script>
+<script src="/js/language/japanese-util.js"></script>
+<script src="/js/templates/template-renderer.js"></script>
+<script src="/js/templates/template-renderer-frame-api.js"></script>
+<script src="/js/templates/template-renderer-frame-main.js"></script>
+
 </body>
 </html>
