--- a/ext/settings-old.html
+++ b/ext/settings-old.html
@@ -13,7 +13,7 @@
         <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
         <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/settings.css">
+        <link rel="stylesheet" type="text/css" href="/css/settings-old.css">
     </head>
     <body>
         <div class="container">
