--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/material.css">
-    <link rel="stylesheet" type="text/css" href="/css/settings2.css">
+    <link rel="stylesheet" type="text/css" href="/css/settings.css">
 </head>
 <body>
 
