--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -81,12 +81,13 @@
     </a>
 </div>
 
+<!-- Scripts -->
 <script src="/js/core.js"></script>
+
+<script src="/js/yomichan.js"></script>
 
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
-<script src="/js/yomichan.js"></script>
-
 <script src="/js/data/permissions-util.js"></script>
 <script src="/js/input/hotkey-help-controller.js"></script>
 <script src="/js/input/hotkey-util.js"></script>
