--- a/ext/popup-preview.html
+++ b/ext/popup-preview.html
@@ -34,6 +34,7 @@
     </div></div>
 </div></div>
 
+<!-- Scripts -->
 <script src="/lib/wanakana.min.js"></script>
 
 <script src="/js/core.js"></script>
