Rename context.css to action-popup.css (#1428)

--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
-    <link rel="stylesheet" type="text/css" href="/css/context.css">
+    <link rel="stylesheet" type="text/css" href="/css/action-popup.css">
 </head>
 <body>
 
