Improve tag styles (#1431)
* Update tag styles

* Refactor _createTag

* Update padding

--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -130,7 +130,8 @@
 <template id="kanji-reading-template"><dd class="kanji-reading"></dd></template>
 
 <!-- Tag templates -->
-<template id="tag-template"><span class="tag"><span class="tag-inner"></span></span></template>
+<template id="tag-template"><span class="tag"><span class="tag-label"><span class="tag-label-content"></span></span></span></template>
+<template id="tag-with-body-template"><span class="tag tag-has-body"><span class="tag-label"><span class="tag-label-content"></span></span><span class="tag-body"><span class="tag-body-content"></span></span></span></template>
 
 <!-- Extra -->
 <template id="footer-notification-template"><div class="footer-notification scrollbar-inverse">
