--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -88,6 +88,7 @@
 
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/data/anki-util.js"></script>
 <script src="/js/data/permissions-util.js"></script>
 <script src="/js/input/hotkey-help-controller.js"></script>
 <script src="/js/input/hotkey-util.js"></script>
