--- a/ext/background.html
+++ b/ext/background.html
@@ -31,6 +31,7 @@
 <script src="/js/comm/clipboard-monitor.js"></script>
 <script src="/js/comm/clipboard-reader.js"></script>
 <script src="/js/comm/mecab.js"></script>
+<script src="/js/data/anki-util.js"></script>
 <script src="/js/data/database.js"></script>
 <script src="/js/data/json-schema.js"></script>
 <script src="/js/data/options-util.js"></script>
