--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -167,6 +167,7 @@
 
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/data/anki-util.js"></script>
 <script src="/js/data/permissions-util.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
