--- a/ext/popup.html
+++ b/ext/popup.html
@@ -97,6 +97,7 @@
 <script src="/js/comm/cross-frame-api.js"></script>
 <script src="/js/comm/frame-endpoint.js"></script>
 <script src="/js/data/anki-note-builder.js"></script>
+<script src="/js/data/anki-util.js"></script>
 <script src="/js/display/display.js"></script>
 <script src="/js/display/display-audio.js"></script>
 <script src="/js/display/display-generator.js"></script>
