--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3198,6 +3198,7 @@
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
 <script src="/js/data/anki-note-builder.js"></script>
+<script src="/js/data/anki-util.js"></script>
 <script src="/js/data/database.js"></script>
 <script src="/js/data/json-schema.js"></script>
 <script src="/js/data/options-util.js"></script>
