--- a/ext/search.html
+++ b/ext/search.html
@@ -83,6 +83,7 @@
 <script src="/js/comm/clipboard-monitor.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
 <script src="/js/data/anki-note-builder.js"></script>
+<script src="/js/data/anki-util.js"></script>
 <script src="/js/display/display.js"></script>
 <script src="/js/display/display-audio.js"></script>
 <script src="/js/display/display-generator.js"></script>
