--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -320,6 +320,7 @@
 
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
+<script src="/js/data/anki-util.js"></script>
 <script src="/js/data/database.js"></script>
 <script src="/js/data/json-schema.js"></script>
 <script src="/js/data/permissions-util.js"></script>
