Improve frequency display (#1438)
* Add frequencyDisplayMode option

* Update tests

* Add setting

* Update frequency display styles

* Improve wrapping

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -677,6 +677,22 @@
                 <label class="toggle"><input type="checkbox" data-setting="general.debugInfo"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
         </div></div>
+        <div class="settings-item advanced-only"><div class="settings-item-inner">
+            <div class="settings-item-left">
+                <div class="settings-item-label">Frequency display style</div>
+                <div class="settings-item-description">Change how frequency information is presented.</div>
+            </div>
+            <div class="settings-item-right">
+                <select data-setting="general.frequencyDisplayMode">
+                    <option value="tags">Tags</option>
+                    <option value="tags-grouped">Tags, grouped content</option>
+                    <option value="split-tags">Split tags</option>
+                    <option value="split-tags-grouped">Split tags, grouped content</option>
+                    <option value="inline-list">Inline list</option>
+                    <option value="list">List</option>
+                </select>
+            </div>
+        </div></div>
         <div class="settings-item advanced-only">
             <div class="settings-item-inner settings-item-inner-wrappable">
                 <div class="settings-item-left">
