Add standalone reading (#1448)
* Add option

* Update display

* Hide redundant readings

* Improve label and description

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -679,6 +679,19 @@
         </div></div>
         <div class="settings-item advanced-only"><div class="settings-item-inner">
             <div class="settings-item-left">
+                <div class="settings-item-label">Term display style</div>
+                <div class="settings-item-description">Change how terms and their readings are displayed.</div>
+            </div>
+            <div class="settings-item-right">
+                <select data-setting="general.termDisplayMode">
+                    <option value="ruby">Term furigana</option>
+                    <option value="ruby-and-reading">Term furigana and reading</option>
+                    <option value="term-and-reading">Raw term and reading</option>
+                </select>
+            </div>
+        </div></div>
+        <div class="settings-item advanced-only"><div class="settings-item-inner">
+            <div class="settings-item-left">
                 <div class="settings-item-label">Frequency display style</div>
                 <div class="settings-item-description">Change how frequency information is presented.</div>
             </div>
