--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -35,9 +35,13 @@
     <div class="debug-info"><a class="debug-log-link">Log debug info to console</a></div>
 </div></template>
 <template id="term-expression-template" data-remove-whitespace-text="true"><div class="term-expression">
-    <div class="term-expression-text-container">
-        <span class="term-expression-text source-text">
+    <div class="term-expression-text-container" lang="ja">
+        <span class="term-expression-text-outer source-text">
             <span class="term-expression-current-indicator"></span>
+            <span class="term-expression-text"></span>
+        </span>
+        <span class="term-expression-reading-outer">
+            <span class="term-expression-reading"></span>
         </span>
     </div>
     <div class="term-expression-details">
