Change "Raw term" to "Plain term" (#1450)

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -686,7 +686,7 @@
                 <select data-setting="general.termDisplayMode">
                     <option value="ruby">Term furigana</option>
                     <option value="ruby-and-reading">Term furigana and reading</option>
-                    <option value="term-and-reading">Raw term and reading</option>
+                    <option value="term-and-reading">Plain term and reading</option>
                 </select>
             </div>
         </div></div>
