--- a/ext/pitch-accents-preview.html
+++ b/ext/pitch-accents-preview.html
@@ -22,25 +22,25 @@
     <li>
         <strong>Downstep notation</strong> -
         <span class="format-preview" lang="ja">
-            <span class="term-pitch-accent-characters"><span class="term-pitch-accent-character" data-position="0" data-pitch="high" data-pitch-next="low"><span class="term-pitch-accent-character-inner">よ</span></span><span class="term-pitch-accent-character" data-position="1" data-pitch="low" data-pitch-next="low"><span class="term-pitch-accent-character-inner">む</span></span></span>
+            <span class="pitch-accent-characters"><span class="pitch-accent-character" data-position="0" data-pitch="high" data-pitch-next="low"><span class="pitch-accent-character-inner">よ</span></span><span class="pitch-accent-character" data-position="1" data-pitch="low" data-pitch-next="low"><span class="pitch-accent-character-inner">む</span></span></span>
         </span>
     </li>
     <li>
         <strong>Downstep position</strong> -
         <span class="format-preview">
-            <span class="term-pitch-accent-position">1</span>
+            <span class="pitch-accent-position">1</span>
         </span>
     </li>
     <li>
         <strong>Graph</strong> -
         <span class="format-preview">
-            <span class="term-pitch-accent-details">
-                <svg class="term-pitch-accent-graph" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 100" focusable="false">
-                    <path class="term-pitch-accent-graph-line" d="M25 25 L75 75"></path>
-                    <path class="term-pitch-accent-graph-line-tail" d="M75 75 L125 75"></path>
-                    <use href="#term-pitch-accent-graph-dot-downstep" x="25" y="25"></use>
-                    <use href="#term-pitch-accent-graph-dot" x="75" y="75"></use>
-                    <use href="#term-pitch-accent-graph-triangle" x="125" y="75"></use>
+            <span class="pitch-accent-details">
+                <svg class="pitch-accent-graph" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 100" focusable="false">
+                    <path class="pitch-accent-graph-line" d="M25 25 L75 75"></path>
+                    <path class="pitch-accent-graph-line-tail" d="M75 75 L125 75"></path>
+                    <use href="#pitch-accent-graph-dot-downstep" x="25" y="25"></use>
+                    <use href="#pitch-accent-graph-dot" x="75" y="75"></use>
+                    <use href="#pitch-accent-graph-triangle" x="125" y="75"></use>
                 </svg>
             </span>
         </span>
