Improve text parser (#1469)
* Merge ungrouped characters

* Update iteration

* Fix incorrect code point handling

* Simplify text

* Specify language

* Update how parsed status is represented

--- a/ext/popup.html
+++ b/ext/popup.html
@@ -29,7 +29,7 @@
                         <div class="search-option" id="query-parser-mode-container" hidden>
                             <select id="query-parser-mode-select"></select>
                         </div>
-                        <div id="query-parser-content"></div>
+                        <div id="query-parser-content" lang="ja"></div>
                     </div>
 
                     <div id="definitions"></div>
