--- a/ext/search.html
+++ b/ext/search.html
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="scan-disable" id="query-parser-container" hidden>
-                        <div id="query-parser-content"></div>
+                        <div id="query-parser-content" lang="ja"></div>
                     </div>
 
                     <div id="definitions"></div>
