Persistent storage controller (#1478)
* Add PersistentStorageController

* Update DictionaryController

* Update DictionaryImportController

* Update when storage stats are updated

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3270,6 +3270,7 @@
 <script src="/js/pages/settings/modal-controller.js"></script>
 <script src="/js/pages/settings/nested-popups-controller.js"></script>
 <script src="/js/pages/settings/permissions-toggle-controller.js"></script>
+<script src="/js/pages/settings/persistent-storage-controller.js"></script>
 <script src="/js/pages/settings/popup-preview-controller.js"></script>
 <script src="/js/pages/settings/popup-window-controller.js"></script>
 <script src="/js/pages/settings/profile-conditions-ui.js"></script>
