--- a/ext/settings-old.html
+++ b/ext/settings-old.html
@@ -1319,6 +1319,7 @@
         <script src="/js/pages/settings/modal-controller.js"></script>
         <script src="/js/pages/settings/modal-jquery.js"></script>
         <script src="/js/pages/settings/permissions-toggle-controller.js"></script>
+        <script src="/js/pages/settings/persistent-storage-controller.js"></script>
         <script src="/js/pages/settings/popup-preview-controller.js"></script>
         <script src="/js/pages/settings/profile-conditions-ui.js"></script>
         <script src="/js/pages/settings/profile-controller.js"></script>
